--- a/index.html
+++ b/index.html
@@ -2,123 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Maslaniec Group FZCO</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Maslaniec Group</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0c1c38;
+      font-family: 'Montserrat', sans-serif;
+      background-color: #002244;
       color: #ffffff;
     }
-
     header {
-      padding: 80px 20px 50px;
+      background-color: #002244;
+      color: #fff;
+      padding: 40px 20px;
       text-align: center;
-      background-color: #0c1c38;
     }
-
     header img {
-      width: 180px;
+      max-width: 300px;
       margin-bottom: 20px;
     }
-
     header h1 {
       font-size: 42px;
-      margin: 10px 0;
-      color: #00fff7;
+      margin: 0;
     }
-
     header p {
-      font-size: 20px;
-      color: #cce6ff;
-      margin: 10px 0;
+      font-size: 18px;
+      margin: 10px 0 0;
     }
-
     section {
       padding: 60px 20px;
       max-width: 900px;
       margin: auto;
+      text-align: center;
+    }
+    section h2 {
+      font-size: 28px;
+      color: #66fcf1;
+    }
+    section p, ul li {
+      font-size: 18px;
+      line-height: 1.6;
       text-align: left;
     }
-
-    h2 {
-      font-size: 28px;
-      margin-bottom: 20px;
-      color: #00fff7;
-      text-align: center;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      font-size: 18px;
-      line-height: 1.8;
-    }
-
-    ul li::before {
-      content: "✅";
-      margin-right: 12px;
-      color: #00fff7;
-      font-size: 18px;
-    }
-
-    .testimonial {
-      margin-bottom: 30px;
-      font-size: 18px;
-      color: #e0e0e0;
-    }
-
-    .btn {
-      display: inline-block;
-      margin: 10px 5px;
-      padding: 14px 28px;
-      background: #00fff7;
-      color: #0c1c38;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 6px;
-    }
-
     footer {
-      background-color: #000d1a;
-      color: #999;
+      background-color: #002244;
+      color: #ffffff;
+      padding: 20px;
       text-align: center;
-      padding: 30px 20px;
       font-size: 14px;
     }
-
     a {
-      color: #00fff7;
+      color: #66fcf1;
       text-decoration: none;
-    }
-
-    .centered {
-      text-align: center;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <img src="logo.jpg" alt="Maslaniec Group Logo" />
-    <h1>Maslaniec Group FZCO</h1>
-    <p>Strategic Relocation & Business Consulting in the UAE</p>
-  </header>
+  <img src="logo.png" alt="Maslaniec Group Logo" style="max-width: 220px; margin-bottom: 20px;">
+  <h1 style="font-size: 38px; color: #00ffe5;">Maslaniec Group FZCO</h1>
+  <p style="font-size: 18px; color: #cccccc;">Strategic Relocation & Business Consulting in the UAE</p>
+</header>
 
   <section>
     <h2>Why Clients Choose Us</h2>
-    <ul>
-      <li>Personalized, one-on-one consulting</li>
-      <li>No generic packages – we tailor solutions</li>
-      <li>Trusted by professionals from Poland, the UK, Ireland, and the USA</li>
-      <li>End-to-end support: business, visa, banking, schooling, housing</li>
-      <li>Responsive, reliable and fully connected in the UAE</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Our Services</h2>
     <ul>
       <li>Relocation consulting – moving to Dubai from Europe</li>
       <li>Business setup and company formation</li>
@@ -129,33 +77,59 @@
       <li>WPS and payroll setup</li>
       <li>Connections to verified legal, tax, and accounting experts</li>
     </ul>
+    <br>
+    <h2>What Makes Us Different</h2>
+    <ul>
+      <li>Personalized, one-on-one consulting</li>
+      <li>No generic packages – we tailor solutions</li>
+      <li>Trusted by professionals from Poland, the UK, Ireland, and the USA</li>
+      <li>End-to-end support: business, visa, banking, schooling, housing</li>
+      <li>Responsive, reliable and fully connected in the UAE</li>
+    </ul>
   </section>
 
   <section>
-    <h2>Client Testimonials</h2>
-    <div class="testimonial">“I didn't expect such a big change in my life, but thanks to Wojtek and Mikołaj, I moved to Dubai and found a new purpose.” – Anna (Poland)</div>
-    <div class="testimonial">“Their step-by-step help gave me clarity and confidence. I highly recommend them!” – James (Ireland)</div>
-    <div class="testimonial">“Relocating to Dubai was the best decision of my life – made possible by Maslaniec Group.” – Sarah (USA)</div>
-    <div class="testimonial">“I didn’t know where to begin – they made the impossible simple.” – David (UK)</div>
-    <div class="testimonial">“Professional, kind, and always available. 10/10 service!” – Karolina (Poland)</div>
+    <h2>Pricing & Consultations</h2>
+    <ul>
+      <li>30-Minute Consultation: <a href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">Book Now – AED 200</a></li>
+      <li>60-Minute Consultation: <a href="https://buy.stripe.com/14k14bacD9F539CfYZ" target="_blank">Book Now – AED 350</a></li>
+      <li>Premium 60-Min + Follow-up Email: <a href="https://buy.stripe.com/4gw8wDdoPaJ9dOg3ce" target="_blank">Book Now – AED 450</a></li>
+    </ul>
+    <p>*Custom solutions available – contact us for a quote.</p>
   </section>
 
-  <section class="centered">
-    <h2>Contact & Consultations</h2>
-    <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">30 Min – AED 200</a>
-    <a class="btn" href="https://buy.stripe.com/14k14bacD9F539CfYZ" target="_blank">60 Min – AED 350</a>
-    <a class="btn" href="https://buy.stripe.com/4gw8wDdoPaJ9dOg3ce" target="_blank">Premium – AED 450</a>
-    <br><br>
-    <a class="btn" href="https://wa.me/971585876880" target="_blank">WhatsApp Us</a>
-    <a class="btn" href="mailto:maslaniecgroup@gmail.com">Email</a>
-    <br><br>
-    <a href="https://instagram.com/maslaniecgroup" target="_blank">Instagram</a> |
-    <a href="https://www.tiktok.com/@mikolaj.maslaniec" target="_blank">TikTok</a>
+  <section>
+    <h2>Blog & Articles</h2>
+    <ul>
+      <li><strong>What Type of Visa Do You Need in Dubai?</strong> – Freelance, Investor, Employment, Golden, Dependent</li>
+      <li><strong>What Can You Really Buy in Dubai Without a License?</strong> – Selling second-hand, using Dubizzle, legal requirements</li>
+      <li><strong>Top 5 Mistakes People Make When Moving to Dubai</strong> – No plan, trusting wrong people, underestimating costs</li>
+      <li><strong>How to Find an Apartment in Dubai</strong> – Areas, rental process, platforms</li>
+      <li><strong>Cost of Living in Dubai</strong> – Breakdown for single person and family</li>
+    </ul>
   </section>
+
+  <section>
+  <h2 style="color: #00ffe5; font-size: 26px;">Contact & Consultations</h2>
+  <p>
+    <a href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank" style="display:inline-block;background:#00ffe5;color:#002244;padding:12px 20px;border-radius:8px;text-decoration:none;font-weight:bold;margin:10px;">30 Min – AED 200</a>
+    <a href="https://buy.stripe.com/14k14bacD9F539CfYZ" target="_blank" style="display:inline-block;background:#00ffe5;color:#002244;padding:12px 20px;border-radius:8px;text-decoration:none;font-weight:bold;margin:10px;">60 Min – AED 350</a>
+    <a href="https://buy.stripe.com/4gw8wDdoPaJ9dOg3ce" target="_blank" style="display:inline-block;background:#00ffe5;color:#002244;padding:12px 20px;border-radius:8px;text-decoration:none;font-weight:bold;margin:10px;">Premium – AED 450</a>
+  </p>
+  <p style="margin-top: 30px;">
+    <a href="https://wa.me/971585876880" target="_blank" style="display:inline-block;background:#25D366;color:white;padding:12px 24px;border-radius:8px;text-decoration:none;font-weight:bold;margin: 10px;">WhatsApp Us</a>
+    <a href="mailto:maslaniecgroup@gmail.com" style="display:inline-block;background:#66fcf1;color:#002244;padding:12px 24px;border-radius:8px;text-decoration:none;font-weight:bold;margin: 10px;">Email</a>
+  </p>
+  <p style="margin-top: 20px;">
+    <a href="https://instagram.com/maslaniecgroup" target="_blank" style="margin-right: 20px; color: #66fcf1;">Instagram</a>
+    <a href="https://www.tiktok.com/@mikolajdxb1" target="_blank" style="color: #66fcf1;">TikTok</a>
+  </p>
+</section>
+
+  
 
   <footer>
-    &copy; 2025 Maslaniec Group FZCO — All Rights Reserved
+    &copy; 2025 Maslaniec Group — All rights reserved
   </footer>
-
 </body>
 </html>
