--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
   <header>
-  <img src="logo.png" alt="Maslaniec Group Logo" style="max-width: 220px; margin-bottom: 20px;">
+  <img src="logo.jpg" alt="Maslaniec Group Logo" style="max-width: 220px; margin-bottom: 20px;">
   <h1 style="font-size: 38px; color: #00ffe5;">Maslaniec Group FZCO</h1>
   <p style="font-size: 18px; color: #cccccc;">Strategic Relocation & Business Consulting in the UAE</p>
 </header>
@@ -120,10 +120,10 @@
     <a href="https://wa.me/971585876880" target="_blank" style="display:inline-block;background:#25D366;color:white;padding:12px 24px;border-radius:8px;text-decoration:none;font-weight:bold;margin: 10px;">WhatsApp Us</a>
     <a href="mailto:maslaniecgroup@gmail.com" style="display:inline-block;background:#66fcf1;color:#002244;padding:12px 24px;border-radius:8px;text-decoration:none;font-weight:bold;margin: 10px;">Email</a>
   </p>
-  <p style="margin-top: 20px;">
-    <a href="https://instagram.com/maslaniecgroup" target="_blank" style="margin-right: 20px; color: #66fcf1;">Instagram</a>
-    <a href="https://www.tiktok.com/@mikolajdxb1" target="_blank" style="color: #66fcf1;">TikTok</a>
-  </p>
+  <div style="margin-top: 30px; display: flex; justify-content: center; gap: 20px;">
+  <a href="https://instagram.com/maslaniecgroup" target="_blank" style="background:#E1306C; color:white; padding:12px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">Instagram</a>
+  <a href="https://www.tiktok.com/@mikolajdxb1" target="_blank" style="background:#000000; color:white; padding:12px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">TikTok</a>
+</div>
 </section>
 
   
