--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 </header>
 
   <section>
-    <h2>Why Clients Choose Us</h2>
+    <p style="font-size: 18px; color: #cccccc; margin-bottom: 30px;">From relocation and setup to long-term support — we provide everything you need to start a new life and business in Dubai.</p>
+    <h2>What We Do Best</h2>
     <ul>
       <li>Relocation consulting – moving to Dubai from Europe</li>
       <li>Business setup and company formation</li>
