--- a/index.html
+++ b/index.html
@@ -66,7 +66,17 @@
 </header>
 
   <section>
-    <p style="font-size: 18px; color: #cccccc; margin-bottom: 30px;">From relocation and setup to long-term support — we provide everything you need to start a new life and business in Dubai.</p>
+  <h2>About Us</h2>
+  <p>Maslaniec Group was born out of experience — not theory. We are a family team, Wojciech and Mikołaj Masłaniec, who’ve lived through the complexity of relocating multiple times and starting over in different parts of the world.</p>
+  <p>Dubai was by far the most challenging move. The systems, the rules, the business setup — everything felt unfamiliar. We spent countless hours searching for real answers, wasting time and money trying to figure it all out on our own. What we needed most back then was someone who had already done it… and could show us the way.</p>
+  <p>That’s exactly what we’ve become — for people like us. We created Maslaniec Group to be the trusted partner we never had: one that’s personal, experienced, and 100% committed to getting things done right. Today, we help others make this move not only easier, but smarter and faster — because we’ve already walked that path, and we know how to guide you through it.</p>
+  
+  <p>We’ve also built a handpicked team of Dubai’s top specialists — professionals who live and breathe this city. Legal experts, business setup advisors, real estate agents, education consultants — every one of them is committed to one mission: making your relocation and business journey smooth, stress-free, and successful. When you work with Maslaniec Group, you're not just getting support — you're gaining a dream team dedicated to helping you win. </p>
+<p style="font-size: 18px; color: #cccccc; margin-top: 40px;">We speak Polish 🇵🇱 and English 🇬🇧 — because clear communication builds real trust.</p>
+</section>
+
+<section>
+  <p style="font-size: 18px; color: #cccccc; margin-bottom: 30px;">From relocation and setup to long-term support — we provide everything you need to start a new life and business in Dubai.</p>
     <h2>What We Do Best</h2>
     <ul>
       <li>Relocation consulting – moving to Dubai from Europe</li>
