--- a/index.html
+++ b/index.html
@@ -110,15 +110,36 @@
   </section>
 
   <section>
-    <h2>Blog & Articles</h2>
-    <ul>
-      <li><strong>What Type of Visa Do You Need in Dubai?</strong> – Freelance, Investor, Employment, Golden, Dependent</li>
-      <li><strong>What Can You Really Buy in Dubai Without a License?</strong> – Selling second-hand, using Dubizzle, legal requirements</li>
-      <li><strong>Top 5 Mistakes People Make When Moving to Dubai</strong> – No plan, trusting wrong people, underestimating costs</li>
-      <li><strong>How to Find an Apartment in Dubai</strong> – Areas, rental process, platforms</li>
-      <li><strong>Cost of Living in Dubai</strong> – Breakdown for single person and family</li>
-    </ul>
-  </section>
+  <h2>Insights & Guides for Living in Dubai</h2>
+  <p style="font-size: 18px; color: #cccccc; margin-bottom: 40px;">Real answers. Practical tips. Written for people just like you — whether you're planning your move or already here.</p>
+  <div style="display: grid; grid-template-columns: 1fr; gap: 30px; text-align: left;">
+    <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
+      <h3>What Type of Visa Do You Need in Dubai?</h3>
+      <p>Freelance, Investor, Employment, Golden, Dependent — we break them all down clearly.</p>
+      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+    </div>
+    <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
+      <h3>What Can You Really Buy in Dubai Without a License?</h3>
+      <p>From selling second-hand goods to using Dubizzle — know your limits and rights.</p>
+      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+    </div>
+    <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
+      <h3>Top 5 Mistakes People Make When Moving to Dubai</h3>
+      <p>We’ve seen them all — here’s how to avoid wasting time, money, and energy.</p>
+      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+    </div>
+    <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
+      <h3>How to Find an Apartment in Dubai</h3>
+      <p>Which areas to target, how to negotiate, and platforms to trust.</p>
+      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+    </div>
+    <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
+      <h3>Cost of Living in Dubai</h3>
+      <p>Breakdown of monthly costs for individuals and families — what to really expect.</p>
+      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+    </div>
+  </div>
+</section>
 
   <section>
   <h2 style="color: #00ffe5; font-size: 26px;">Contact & Consultations</h2>
