--- a/blog-visa-guide.html
+++ b/blog-visa-guide.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>What Type of Visa Do You Need in Dubai? | Maslaniec Group</title>
   <style>
     body {
@@ -16,6 +16,13 @@
     }
     h1 {
       color: #66fcf1;
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
+    h2 {
+      color: #00ffe5;
+      font-size: 24px;
+      margin-top: 30px;
     }
     p {
       font-size: 18px;
@@ -48,6 +55,6 @@
   <h2>5. Dependent Visa</h2>
   <p>For spouses, children, and parents sponsored by a UAE resident (employed or investor). Requires proof of income and relationship.</p>
 
-  <p>Still unsure which visa fits you best? <a href="mailto:maslaniecgroup@gmail.com">Contact us</a> — we'll help you choose the right path.</p>
+  <p>If you're still unsure which visa is right for you, <a href="mailto:maslaniecgroup@gmail.com">contact us</a> — we’ll help you choose the best path based on your situation.</p>
 </body>
 </html>
