--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
       <h3>What Type of Visa Do You Need in Dubai?</h3>
       <p>Freelance, Investor, Employment, Golden, Dependent — we break them all down clearly.</p>
-      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+      <a href="blog-visa-guide.html" style="color: #66fcf1; text-decoration: underline;">Read more</a>
     </div>
     <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
       <h3>What Can You Really Buy in Dubai Without a License?</h3>
