--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
       <a href="blog-visa-guide.html" style="color: #66fcf1; text-decoration: underline;">Read more</a>
     </div>
     <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
-      <h3>What Can You Really Buy in Dubai Without a License?</h3>
-      <p>From selling second-hand goods to using Dubizzle — know your limits and rights.</p>
-      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
-    </div>
+  <h3>What Can You Really Buy in Dubai Without a License?</h3>
+  <p>From selling second-hand goods to using Dubizzle — know your limits and rights.</p>
+  <a href="blog-buying-in-dubai.html" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+</div>
     <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
       <h3>Top 5 Mistakes People Make When Moving to Dubai</h3>
       <p>We’ve seen them all — here’s how to avoid wasting time, money, and energy.</p>
