--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
   <a href="blog-buying-in-dubai.html" style="color: #66fcf1; text-decoration: underline;">Read more</a>
 </div>
     <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
-      <h3>Top 5 Mistakes People Make When Moving to Dubai</h3>
-      <p>We’ve seen them all — here’s how to avoid wasting time, money, and energy.</p>
-      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
-    </div>
+  <h3>Top 5 Mistakes People Make When Moving to Dubai</h3>
+  <p>We’ve seen them all — here’s how to avoid wasting time, money, and energy.</p>
+  <a href="blog-top-5-mistakes.html" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+</div>
     <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
       <h3>How to Find an Apartment in Dubai</h3>
       <p>Which areas to target, how to negotiate, and platforms to trust.</p>
