--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
   <a href="blog-top-5-mistakes.html" style="color: #66fcf1; text-decoration: underline;">Read more</a>
 </div>
     <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
-      <h3>How to Find an Apartment in Dubai</h3>
-      <p>Which areas to target, how to negotiate, and platforms to trust.</p>
-      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
-    </div>
+  <h3>How to Find an Apartment in Dubai</h3>
+  <p>Which areas to target, how to negotiate, and platforms to trust.</p>
+  <a href="blog-find-apartment-dubai.html" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+</div>
     <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
       <h3>Cost of Living in Dubai</h3>
       <p>Breakdown of monthly costs for individuals and families — what to really expect.</p>
