--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
   <a href="blog-find-apartment-dubai.html" style="color: #66fcf1; text-decoration: underline;">Read more</a>
 </div>
     <div style="background-color: #003355; padding: 20px; border-radius: 12px;">
-      <h3>Cost of Living in Dubai</h3>
-      <p>Breakdown of monthly costs for individuals and families — what to really expect.</p>
-      <a href="#" style="color: #66fcf1; text-decoration: underline;">Read more</a>
-    </div>
+  <h3>Cost of Living in Dubai</h3>
+  <p>Breakdown of monthly costs for individuals and families — what to really expect.</p>
+  <a href="blog-cost-of-living-dubai.html" style="color: #66fcf1; text-decoration: underline;">Read more</a>
+</div>
   </div>
 </section>
 
