--- a/index.html
+++ b/index.html
@@ -76,19 +76,33 @@
 </section>
 
 <section>
-  <p style="font-size: 18px; color: #cccccc; margin-bottom: 30px;">From relocation and setup to long-term support — we provide everything you need to start a new life and business in Dubai.</p>
-    <h2>What We Do Best</h2>
-    <ul>
-      <li>Relocation consulting – moving to Dubai from Europe</li>
-      <li>Business setup and company formation</li>
-      <li>Opening personal and business bank accounts</li>
-      <li>Visa and residence permit assistance</li>
-      <li>School application support for families</li>
-      <li>Real estate and rental guidance</li>
-      <li>WPS and payroll setup</li>
-      <li>Connections to verified legal, tax, and accounting experts</li>
-    </ul>
-    <br>
+  <p style="font-size: 18px; color: #cccccc; margin-bottom: 30px;">
+    From relocation and setup to long-term support — we provide everything you need to start a new life and business in Dubai.
+  </p>
+  <h2>What We Do Best</h2>
+  <ul>
+    <li>Relocation consulting – moving to Dubai from Europe</li>
+    <li>Business setup and company formation</li>
+    <li>Opening personal and business bank accounts</li>
+    <li>Visa and residence permit assistance</li>
+    <li>School application support for families</li>
+    <li>Real estate and rental guidance</li>
+    <li>WPS and payroll setup</li>
+    <li>Connections to verified legal, tax, and accounting experts</li>
+    <li><strong>Strategic tax relocation support</strong> – we guide our clients through:
+      <ul style="margin-top: 10px;">
+        <li>Understanding how international tax residency works</li>
+        <li>Exploring legally compliant options in the UAE and other tax-efficient jurisdictions</li>
+        <li>Connecting with our network of licensed legal and tax professionals</li>
+        <li>Learning how Dubai’s Free Zones and tax framework can benefit their situation</li>
+        <li>Preparing the groundwork before engaging licensed experts for final steps</li>
+      </ul>
+    </li>
+  </ul>
+  <p style="font-size: 14px; color: #cccccc; margin-top: 20px;">
+    <em>*Maslaniec Group provides consulting services only. All legal, tax, and compliance matters are referred to licensed professionals from our trusted network.*</em>
+  </p>
+</section>
     <h2>What Makes Us Different</h2>
     <ul>
       <li>Personalized, one-on-one consulting</li>
