--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
     .blog-box h3 {
       margin-top: 0;
     }
+    .blog-box a {
+      color: #00bfff;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .blog-box a:hover {
+      color: #ffffff;
+      text-decoration: underline;
+    }
     .pricing-buttons a {
       display: inline-block;
       background: #00ffe5;
