--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       margin: 10px;
     }
     .whatsapp { background: #25D366; color: white; }
-    .email { background: #66fcf1; color: #002244; }
+    .email    { background: #66fcf1; color: #002244; }
     .socials a {
       background: #000;
       color: #fff;
@@ -104,8 +104,11 @@
       text-decoration: none;
       font-weight: bold;
       margin: 10px;
+      display: inline-block;
     }
     .socials a.instagram { background: #E1306C; }
+    .socials a.tiktok    { background: #000; }
+    .socials a.facebook  { background: #1877F2; }
     footer {
       background-color: #002244;
       color: #ffffff;
@@ -131,7 +134,7 @@
     <p style="text-align:center; margin-top: 40px; color: #cccccc;">We speak Polish 🇵🇱 and English 🇬🇧 — because clear communication builds real trust.</p>
   </section>
 
-<section>
+  <section>
     <h2>What We Do Best</h2>
     <ul>
       <li>Relocation consulting – moving to Dubai from Europe</li>
@@ -213,7 +216,8 @@
     </div>
     <div class="socials" style="text-align: center;">
       <a href="https://instagram.com/maslaniecgroup" target="_blank" class="instagram">Instagram</a>
-      <a href="https://www.tiktok.com/@mikolajdxb1" target="_blank">TikTok</a>
+      <a href="https://www.tiktok.com/@maslaniec.group" target="_blank" class="tiktok">TikTok</a>
+      <a href="https://www.facebook.com/MaslaniecGroup" target="_blank" class="facebook">Facebook</a>
     </div>
   </section>
 
